Fixed title alignment

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -302,6 +302,11 @@ body {
     text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
     line-height: 14px; 
 }
+.titleText{
+    width:150px;
+    position:relative;
+    top:2px;
+}
 .folder{
     float: left;
     margin-right:5px;
